@@ -2,6 +2,7 @@ requires 'perl', '5.008001';
 
 on 'test' => sub {
     requires 'Test::More', '0.98';
+    requires 'Test::Exception';
 };
 
 requires 'parent';
