@@ -2,6 +2,8 @@ Revision history for Perl extension Time-Format-MySQL
 
 {{$NEXT}}
 
+    - add format option
+
 0.02 2013-05-27T01:16:16Z
 
     - add dependency
